--- a/src/Components/InitialDisplay/style.css
+++ b/src/Components/InitialDisplay/style.css
@@ -27,4 +27,15 @@
     background: #FFFFFF;
     box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
     border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 145px;
+    height: 209px;
+    margin-bottom: 11px;
+}
+
+.initial-display-movie img{
+    width: 129px;
+    height: 193px;
 }
