--- a/src/Components/SessionsDisplay/style.css
+++ b/src/Components/SessionsDisplay/style.css
@@ -12,4 +12,89 @@
     text-align: center;
     letter-spacing: 0.04em;
     color: #293845;
+    box-sizing: border-box;
+    margin-top: 67px;
+}
+
+.session-date{
+    width: 100%;
+    height: 35px;
+    margin-bottom: 22px;
+    box-sizing: border-box;
+    padding-left: 24px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.02em;
+    color: #293845;
+}
+
+.session-times{
+    width: 100%;
+    box-sizing: border-box;
+    padding-left: 24px;
+    display: flex;
+    margin-bottom: 23px;
+}
+
+.session-time{
+    width: 21.9%;
+    height: 43px;
+    background-color: #E8833A;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-right: 8px;
+}
+
+.sessions-display-footer{
+    box-sizing: border-box;
+    background-color: #DFE6ED;
+    border: 1px solid #9EADBA;
+    height: 117px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 30px;
+    color: #293845;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+}
+
+.image-sessions-display-footer{
+    width: 64px;
+    height: 89px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+    margin-right: 14px;
+}
+
+.image-sessions-display-footer img{
+    width: 48px;
+    height: 72px;
 }
