link to seats display done

--- a/src/Components/SessionsDisplay/style.css
+++ b/src/Components/SessionsDisplay/style.css
@@ -58,6 +58,7 @@
     letter-spacing: 0.02em;
     color: #FFFFFF;
     margin-right: 8px;
+    text-decoration: none;
 }
 
 .sessions-display-footer{
