--- a/src/Components/SeatsDisplay/style.css
+++ b/src/Components/SeatsDisplay/style.css
@@ -6,7 +6,7 @@
 
 .seats-display-title{
     width: 100%;
-    height: 110px;
+    height: 60px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -19,7 +19,7 @@
     letter-spacing: 0.04em;
     color: #293845;
     box-sizing: border-box;
-    margin-top: 67px;
+    margin-top: 77px;
 }
 
 .seats-display-seats{
@@ -133,10 +133,20 @@
     border: none;
     height: 51px;
     width: 86vw;
-    background: #FFFFFF;
+    background-color: #FFFFFF;
     border: 1px solid #D5D5D5;
     border-radius: 3px;
     margin-bottom: 7px;
+    font-family: 'Roboto';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+    color: #AFAFAF;
+    box-sizing: border-box;
+    padding-left: 18px;
 }
 
 .form-button{
@@ -159,4 +169,43 @@
     letter-spacing: 0.04em;
     color: #FFFFFF;
     margin-top: 50px;
+}
+
+.seats-display-footer{
+    box-sizing: border-box;
+    background-color: #DFE6ED;
+    border: 1px solid #9EADBA;
+    height: 117px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 30px;
+    color: #293845;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+}
+
+.image-seats-display-footer{
+    width: 64px;
+    height: 89px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+    margin-right: 14px;
+}
+
+.image-seats-display-footer img{
+    width: 48px;
+    height: 72px;
 }
